fixed height alignment of cards

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ span+span {
     border-bottom: solid gray;
     flex: 1;
     padding: 2%;
-    margin-bottom:5%;
+    margin-bottom:2%;
 }
 
 #cardSection3 {
